apps/monitoring-fritzbox-exporter/k8s.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fritzbox-exporter
  namespace: monitoring
  labels:
    app.kubernetes.io/name: fritzbox-exporter
spec:
  type: ClusterIP
  ports:
    - port: 9787
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app.kubernetes.io/name: fritzbox-exporter
